Update: Add 'Menangani Whitespace pada Pandas Data Frame' tricks
- Add 'Menangani Whitespace pada Data Frame' points

--- a/Trik_Pandas_11.ipynb
+++ b/Trik_Pandas_11.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e6507f1f",
+   "id": "01933240",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b719ec",
+   "id": "4a8be091",
    "metadata": {},
    "source": [
     "# Title: Pandas 11"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32205882",
+   "id": "913e5bc4",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94958c74",
+   "id": "e0737d0a",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "29bbd643",
+   "id": "2910f97d",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae23171",
+   "id": "aa148198",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ecd24ef8",
+   "id": "537da6ff",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c57d6a1",
+   "id": "742e75c2",
    "metadata": {},
    "source": [
     "#### Menerapkan Agregasi pada Sejumlah Kolom dengan agg()"
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9d4a5af",
+   "id": "8e422cf3",
    "metadata": {},
    "source": [
     "- Untuk menerapkan agregasi kita bisa menggunakan fungsi `agg()`.\n",
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1812f25e",
+   "id": "6a6dcfe8",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f070dba2",
+   "id": "d3e1190e",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b97eea4",
+   "id": "6cbf1d6f",
    "metadata": {},
    "source": [
     "#### \n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c8cf664",
+   "id": "4b5ee223",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c9abc2f6",
+   "id": "c29fbe24",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "194b4e06",
+   "id": "0ec963ee",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3bffeba6",
+   "id": "e4b70f3d",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb43d906",
+   "id": "a039954b",
    "metadata": {},
    "source": [
     "#### Mengurutkan Data Berdasarkan Kolom Tertentu"
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b6b0f50",
+   "id": "905514cc",
    "metadata": {},
    "source": [
     "- Untuk mengurutkan data kita bisa menggunakan fungsi `sort_values()`.\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6bc6273d",
+   "id": "b207807d",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d0db0c6b",
+   "id": "11a59cc3",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cb4b9785",
+   "id": "1b93b282",
    "metadata": {},
    "outputs": [
     {
@@ -1036,6 +1036,371 @@
    ],
    "source": [
     "df.sort_values(['survived', 'age']).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aea8ce36",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #43 Menangani Whitespace pada Pandas Data Frame\n",
+    "#### Source : https://youtu.be/uDT6-3_l67s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c872af42",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "db52bb06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n",
+      "1.20.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45d1c4bb",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fc3c9a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nim</th>\n",
+       "      <th>nama</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>adi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
+       "      <td>tejo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td>bejo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  nim  nama\n",
+       "0  10   adi\n",
+       "1  11      \n",
+       "2  12  tejo\n",
+       "3  13      \n",
+       "4      bejo"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'nim': ['10', '11', '12', '13', '  '],\n",
+    "        'nama': ['adi', '  ', 'tejo', '  ', 'bejo']}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ba6ed61",
+   "metadata": {},
+   "source": [
+    "#### Menangani Whitespace pada Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53aa5c32",
+   "metadata": {},
+   "source": [
+    "- Untuk mengatasi whitespace kita dapat menggunakan fungsi `replace()`.\n",
+    "- Parameter regex harus bernilai *True*.\n",
+    "- Parameter pertama adalah parameter yang menyertakan regex pattern dan paramter ini selalu diawali dengan karakter r .\n",
+    "- Karakter '^' adalah awal dan karakter '$' akhir.\n",
+    "- Nilai '\\s' pada parameter tersebut memiliki arti spasi tunggal .\n",
+    "- Nilai '*' merepresentasikan karakter '\\s' yang jumlahnya tidak tentu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "973cc5d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nim</th>\n",
+       "      <th>nama</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>adi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
+       "      <td>tejo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td>bejo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  nim  nama\n",
+       "0  10   adi\n",
+       "1  11      \n",
+       "2  12  tejo\n",
+       "3  13      \n",
+       "4      bejo"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "39ad08d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   nim     5 non-null      object\n",
+      " 1   nama    5 non-null      object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 208.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d1f47286",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nim</th>\n",
+       "      <th>nama</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>adi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
+       "      <td>tejo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bejo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   nim  nama\n",
+       "0   10   adi\n",
+       "1   11   NaN\n",
+       "2   12  tejo\n",
+       "3   13   NaN\n",
+       "4  NaN  bejo"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.replace(r'^\\s*$', np.nan, regex=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c81c799e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   nim     4 non-null      object\n",
+      " 1   nama    3 non-null      object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 208.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   }
  ],
