Finish: Add 'Menata ulang kolom Data Frame' tricks
- Add 'Menata Ulang Penempatan Kolom pada Data Frame' points

--- a/Trik_Pandas_11.ipynb
+++ b/Trik_Pandas_11.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "01933240",
+   "id": "5c98a592",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8be091",
+   "id": "c6014898",
    "metadata": {},
    "source": [
     "# Title: Pandas 11"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "913e5bc4",
+   "id": "a8cc622f",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0737d0a",
+   "id": "b41bd977",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2910f97d",
+   "id": "7093d25a",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa148198",
+   "id": "6b14c2ec",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "537da6ff",
+   "id": "3d8b8545",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "742e75c2",
+   "id": "9dced58b",
    "metadata": {},
    "source": [
     "#### Menerapkan Agregasi pada Sejumlah Kolom dengan agg()"
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e422cf3",
+   "id": "dbd408c6",
    "metadata": {},
    "source": [
     "- Untuk menerapkan agregasi kita bisa menggunakan fungsi `agg()`.\n",
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6a6dcfe8",
+   "id": "af677fff",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d3e1190e",
+   "id": "0fe6eadf",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cbf1d6f",
+   "id": "0ecd2e6a",
    "metadata": {},
    "source": [
     "#### \n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b5ee223",
+   "id": "ad8dfb71",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c29fbe24",
+   "id": "842f3642",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ec963ee",
+   "id": "bf27c408",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e4b70f3d",
+   "id": "12ecbb01",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a039954b",
+   "id": "16f0f942",
    "metadata": {},
    "source": [
     "#### Mengurutkan Data Berdasarkan Kolom Tertentu"
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "905514cc",
+   "id": "40420c69",
    "metadata": {},
    "source": [
     "- Untuk mengurutkan data kita bisa menggunakan fungsi `sort_values()`.\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b207807d",
+   "id": "216300ca",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "11a59cc3",
+   "id": "63bcf8f3",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1b93b282",
+   "id": "31e1f8d8",
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea8ce36",
+   "id": "2403f5c7",
    "metadata": {},
    "source": [
     "#### \n",
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c872af42",
+   "id": "e6ce0808",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "db52bb06",
+   "id": "63a1eaae",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45d1c4bb",
+   "id": "96b6551d",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fc3c9a05",
+   "id": "1976ed23",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba6ed61",
+   "id": "08dc54dd",
    "metadata": {},
    "source": [
     "#### Menangani Whitespace pada Data Frame"
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53aa5c32",
+   "id": "be33a8c3",
    "metadata": {},
    "source": [
     "- Untuk mengatasi whitespace kita dapat menggunakan fungsi `replace()`.\n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "973cc5d1",
+   "id": "28fc037c",
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "39ad08d7",
+   "id": "51cb9062",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d1f47286",
+   "id": "11724565",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c81c799e",
+   "id": "f6b786e6",
    "metadata": {},
    "outputs": [
     {
@@ -1401,6 +1401,468 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d37d0e0a",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #44 Menata ulang kolom Data Frame\n",
+    "#### Source : https://youtu.be/xDTR8XTfP40"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39009ba1",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a24b774d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n",
+      "1.20.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "479db275",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fda59aa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C  D  E\n",
+       "0  6  4  7  8  6\n",
+       "1  6  6  8  2  7\n",
+       "2  7  6  6  2  8\n",
+       "3  6  4  1  9  3\n",
+       "4  1  2  2  4  7"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_rows = 5\n",
+    "n_cols = 5\n",
+    "cols = tuple('ABCDE')\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randint(1, 10, size=(n_rows, n_cols)), \n",
+    "                  columns=cols)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1367748e",
+   "metadata": {},
+   "source": [
+    "#### Menata Ulang Penempatan Kolom pada Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0c6bbe",
+   "metadata": {},
+   "source": [
+    "- Untuk menata ulang, kita hanya perlu memindahkann urutan kolom yang kita mau seperti contoh di bawah.\n",
+    "- Untuk menyimpan perubahan penempatan  kolom bisa kita masukkan kedalam variabel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2a3903f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>D</th>\n",
+       "      <th>C</th>\n",
+       "      <th>A</th>\n",
+       "      <th>E</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   D  C  A  E  B\n",
+       "0  8  7  6  6  4\n",
+       "1  2  8  6  7  6\n",
+       "2  2  6  7  8  6\n",
+       "3  9  1  6  3  4\n",
+       "4  4  2  1  7  2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['D', 'C', 'A', 'E', 'B']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1ce71e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C  D  E\n",
+       "0  6  4  7  8  6\n",
+       "1  6  6  8  2  7\n",
+       "2  7  6  6  2  8\n",
+       "3  6  4  1  9  3\n",
+       "4  1  2  2  4  7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0a7f6326",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>D</th>\n",
+       "      <th>C</th>\n",
+       "      <th>A</th>\n",
+       "      <th>E</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   D  C  A  E  B\n",
+       "0  8  7  6  6  4\n",
+       "1  2  8  6  7  6\n",
+       "2  2  6  7  8  6\n",
+       "3  9  1  6  3  4\n",
+       "4  4  2  1  7  2"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df[['D', 'C', 'A', 'E', 'B']]\n",
+    "df"
    ]
   }
  ],
